--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 dist
+database
 dist-ssr
 *.local
 
@@ -22,3 +23,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.txt
+*.sql
+.env
+.env.local
+.env.example
+
+client_secret_483329714188-3498q4gkjig7jo1honqjqmrie7c36roo.apps.googleusercontent.com.json
